--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programming Foundations Module 1 Lesson 1</title>
+    <link rel="icon" href="data:;base64,="/>
 </head>
 <body>
     <h1>Programming Foundations Module 1 Lesson 1</h1>
+
+    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
+
 </body>
 </html>
